--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Ionvex Energy | Warranty</title>
+</head>
+<body>
 
+<h2>Battery Warranty Check</h2>
+
+<input id="serialInput" placeholder="Enter Serial Number">
+<button id="checkBtn">Check</button>
+
+<p id="result"></p>
+
+<script type="module" src="/js/warranty/checkWarranty.js"></script>
+</body>
+</html>
