--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ionvex Energy | Warranty</title>
+  <title>Ionvex Energy | Warranty Check</title>
 </head>
 <body>
 
-<h2>Battery Warranty Check</h2>
+<h2>Ionvex Energy</h2>
+<p>Battery Warranty Check</p>
 
-<input id="serialInput" placeholder="Enter Serial Number">
-<button id="checkBtn">Check</button>
+<input id="serialInput" placeholder="Enter Battery Serial Number">
+<button id="checkBtn">Check Warranty</button>
 
 <p id="result"></p>
 
