--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Ionvex Energy | Warranty Check</title>
+  <meta charset="UTF-8" />
+  <title>Ionvex Energy – Warranty Check</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
 
-<h2>Ionvex Energy</h2>
-<p>Battery Warranty Check</p>
+  <h2>Ionvex Energy</h2>
+  <input id="serialInput" placeholder="Enter Battery Serial No" />
+  <button id="checkBtn">Check Warranty</button>
 
-<input id="serialInput" placeholder="Enter Battery Serial Number">
-<button id="checkBtn">Check Warranty</button>
+  <div id="result"></div>
 
-<p id="result"></p>
+  <!-- JS -->
+  <script type="module" src="/js/firebase/app.js"></script>
+  <script type="module" src="/js/warranty/checkWarranty.js"></script>
 
-<script type="module" src="/js/warranty/checkWarranty.js"></script>
 </body>
 </html>
