--- a/public/login.html
+++ b/public/login.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
+  <title>Login | Ionvex Energy</title>
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
-<h2>Login</h2>
+<h2>Ionvex Energy Login</h2>
 
-<input id="email" placeholder="Email" />
-<br><br>
-<input id="password" type="password" placeholder="Password" />
-<br><br>
+<input id="email" placeholder="Email">
+<input id="password" type="password" placeholder="Password">
 
-<button onclick="login()">Login</button>
-<p id="msg"></p>
+<button id="loginBtn">Login</button>
+
+<p id="error" style="color:red;"></p>
 
 <script type="module" src="/js/firebase/auth.js"></script>
 </body>
