--- a/public/login.html
+++ b/public/login.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Login | Ionvex Energy</title>
+  <meta charset="UTF-8">
+  <title>Dealer Login | Ionvex Energy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="/css/main.css">
+  <script type="module" src="/js/firebase/app.js"></script>
 </head>
 <body>
 
-<h2>Ionvex Energy Login</h2>
+<div class="login-container">
+  <h2>Dealer / Admin Login</h2>
 
-<input id="email" placeholder="Email">
-<input id="password" type="password" placeholder="Password">
+  <input type="email" id="email" placeholder="Email">
+  <input type="password" id="password" placeholder="Password">
 
-<button id="loginBtn">Login</button>
+  <button id="loginBtn" class="btn primary">Login</button>
 
-<p id="error" style="color:red;"></p>
+  <p id="error" class="error"></p>
+</div>
 
-<script type="module" src="/js/firebase/auth.js"></script>
+<script type="module" src="/js/auth/login.js"></script>
 </body>
 </html>
