--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 <!-- ================= DEALER CTA ================= -->
 <section class="dealer-cta">
   <h2>Become an Authorized Ionvex Dealer</h2>
-  <a href="/login.html" class="btn primary">Dealer Login</a>
+  <a href="/register.html" class="btn outline">Become a Dealer</a>
 </section>
 
 <!-- ================= FOOTER ================= -->
