--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,13 @@
 
     <nav>
       <a href="/">Home</a>
-      <a href="/products.html">Products</a>
-      <a href="/warranty.html">Warranty</a>
-      <a href="/login.html" class="btn">Dealer Login</a>
-    </nav>
+      
+  <a href="/products.html">Products</a>
+  <a href="/warranty.html">Warranty</a>
+
+  <a href="/login.html" class="btn">Dealer Login</a>
+  <a href="/register.html" class="btn outline">Become a Dealer</a>
+      </nav>
   </div>
 </header>
 
