--- a/public/index.html
+++ b/public/index.html
@@ -91,9 +91,13 @@
 
 <!-- ================= DEALER CTA ================= -->
 <section class="dealer-cta">
-  <h2>Become an Authorized Ionvex Dealer</h2>
-  
-</section>
+  <h2>Partner With Ionvex Energy</h2>
+  <p>Join our nationwide dealer network</p>
+
+  <a href="/register.html" class="btn primary">
+    Apply for Dealership
+  </a>
+  </section>
 
 <!-- ================= FOOTER ================= -->
 <footer>
